--- a/html/index.html
+++ b/html/index.html
@@ -1,1 +1,25 @@
-<html lang="en"><head><meta charset="UTF-8"/><meta http-equiv="X-UA-Compatible" content="ie=edge"/><title>Document</title></head><body><nav> <ul> <li> <img src="../imagenes/logo.png" alt="Logo"/></li><li>Inicio   </li><li>Servicios</li><li>Conocenos</li><li>Artículos</li></ul></nav><header> <h1>Dental Salazar</h1></header><section> <p></p></section></body></html>
+
+<html lang="en">
+  <head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <title>Document</title>
+  </head>
+  <body>
+    <nav> 
+      <ul> 
+        <li> <img src="../imagenes/logo.png" alt="Logo"/></li>
+        <li>Inicio   </li>
+        <li>Servicios</li>
+        <li>Conocenos</li>
+        <li>Artículos</li>
+      </ul>
+    </nav>
+    <header> 
+      <h1>Dental Salazar</h1>
+    </header>
+    <section> 
+      <p>Cómo conseguir una cita</p>
+    </section>
+  </body>
+</html>
