--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/index.css"/>
+    <title>Dental Salazar</title>
   </head>
   <body>
     <nav> 
