--- a/html/index.html
+++ b/html/index.html
@@ -9,18 +9,19 @@
   <body>
     <nav> 
       <ul> 
-        <li> <img src="../imagenes/logo.png" alt="Logo"/></li>
-        <li>Inicio   </li>
+        <li class="start">Inicio   </li>
+        <div class="line"></div>
         <li>Servicios</li>
         <li>Conocenos</li>
-        <li>Artículos</li>
+        <li>Artículos  </li>
       </ul>
+      <div class="circle">
+        <div class="cross"></div>
+        <div class="cross2"></div>
+      </div>
     </nav>
-    <header> 
-      <h1>Dental Salazar</h1>
-    </header>
-    <section> 
-      <p>Cómo conseguir una cita</p>
-    </section>
   </body>
 </html>
+<section> 
+  <p>Cómo conseguir una cita</p>
+</section>
