--- a/html/_menu.html
+++ b/html/_menu.html
@@ -5,20 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <link rel="stylesheet" href="../css/index.css"/>
     <title>Dental Salazar</title>
+    <script src="../js"></script>
   </head>
   <body>
-    <nav> 
+    <nav>
       <ul> 
-        <li class="start">Inicio   </li>
+        <li class="start">  <a href="inicio.html">
+             Inicio</a></li>
         <div class="line"></div>
-        <li>Servicios</li>
-        <li>Conocenos</li>
-        <li>Artículos  </li>
+        <li><a href="servicios.html">Servicios</a></li>
+        <li> <a href="conocenos.html">Conocenos</a></li>
+        <li> <a href="artículos.html">Artículos  </a></li><a> 
+          <div class="c2">
+            <div class="cross">
+              <div class="cross2"></div>
+            </div>
+          </div></a>
       </ul>
-      <div class="circle">
-        <div class="cross"></div>
-        <div class="cross2"></div>
-      </div>
     </nav>
   </body>
 </html>
